# Elson-TB2

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .gitleaks.toml  ACTION_PLAN.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  AUTOMATED_TRADING_IMPLEMENTATION.md  BIOMETRIC_SECURITY_AUDIT.md  BIOMETRIC_SECURITY_FIXES_APPLIED.md  BIOMETRIC_TEST_RESULTS.md  BRANCH_COMPARISON_REPORT.md  CLAUDE.md  CLEANUP_ACTION_PLAN.md  COMPLETE_TEST_REPORT.md  COMPREHENSIVE_REDUNDANCY_AUDIT_REPORT.md  DEDUPLICATION_REPORT.csv  DEDUPLICATION_REPORT.json  DEDUPLICATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STRATEGY.md  Dockerfile  ELSON_FINANCIAL_AI_CHECKLIST.md  GCP_AGENT_SETUP.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_SUMMARY.md  LAUNCH_READINESS_SUMMARY.md  LICENSE  MERGE_STRATEGY.md  MODEL_DEPLOYMENT_STATUS.md  MONOREPO_OPTIMIZATION_ROADMAP.md  NAMECHEAP_DNS_SETUP.md  PHASE_2_TEST_REPORT.md  QUICK_DEPLOY_GUIDE.md  README.md  REDIS_TEST_RESULTS.md  REMEDIATION_PLAN.md  ROUTE_FIXES_SUMMARY.md  (+23 more)
.github/: SECURITY.md  (+1 more)
trading-engine/: README.md  pyproject.toml
trading-engine/trading_engine/: __init__.py
trading-engine/trading_engine/backtesting/: data_handler.py  performance.py
trading-engine/trading_engine/data/: __init__.py
trading-engine/trading_engine/engine/: performance_monitor.py  risk_config.py  strategy_optimizer.py  trade_executor.py
trading-engine/trading_engine/ml_models/: __init__.py  account.py  base.py  notification.py  portfolio.py  quantum_model.py  subscription.py  trade.py  user.py
trading-engine/trading_engine/risk/: __init__.py
(+1861 files in other folders)
